--- a/showcase/pom.xml
+++ b/showcase/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.xhr</groupId>
-	<artifactId>springboot</artifactId>
+	<artifactId>SpringFantasy</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>springboot</name>
-	<description>Demo project for Spring Boot</description>
+	<name>SpringFantasy</name>
+	<description>SpringFantasy</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
