--- a/showcase/src/main/resources/application.properties
+++ b/showcase/src/main/resources/application.properties
@@ -13,6 +13,9 @@ server.tomcat.background-processor-delay=30
 server.tomcat.max-threads = 10
 server.tomcat.uri-encoding = UTF-8
 
+#Exclude the Spring DataSource Configuration for now
+#spring.autoconfigure.exclude= org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.name= dev
 spring.datasource.initialize= false
@@ -21,11 +24,13 @@ spring.datasource.schema= dev
 #spring.datasource.platform= # the platform to use in the schema resource (schema-${platform}.sql)
 #spring.datasource.continueOnError=false # continue even if can't be initialized
 spring.datasource.separator=;
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://:3306/dev?autoReconnect=true&characterEncoding=UTF-8&useSSL=false
-spring.datasource.username=
-spring.datasource.password=
-spring.datasource.max-active=100
+#com.mysql.cj.jdbc.Driver
+spring.datasource.driverClassName=org.postgresql.Driver
+#jdbc:mysql://1:3306/dev?autoReconnect=true&characterEncoding=UTF-8&useSSL=false
+spring.datasource.url=jdbc:postgresql://localhost/demodb
+spring.datasource.username=postgres
+spring.datasource.password=123
+spring.datasource.max-active=2
 spring.datasource.max-idle=2
 spring.datasource.min-idle=2
 spring.datasource.initial-size=2
@@ -41,8 +46,11 @@ spring.datasource.max-wait-millis=60000
 #spring.jpa.properties.*= # properties to set on the JPA connection
 spring.jpa.openInView=true
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL57InnoDBDialect
-spring.jpa.database=MYSQL
+
+#org.hibernate.dialect.MySQL57InnoDBDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
+
+spring.jpa.database=POSTGRESQL
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.hibernate.ddl-auto= false
@@ -62,8 +70,14 @@ spring.application.name=helloservice
 #Shrio LoginUrl
 shiro.loginUrl = /login
 shiro.successUrl = /hello
+shiro.unauthorizeUrl = /login
 # Let Shiro Manage the sessions
 shiro.userNativeSessionManager = true
 
 # disable URL session rewriting
 shiro.sessionManager.sessionIdUrlRewritingEnabled = false
+
+shiro.PathDefine.user=/hello,/**,/breakfast
+shiro.PathDefine.anon=/loginajax/**,/meal,/money
+shiro.PathDefine.authc=/login
+shiro.PathDefine.logout=/logout
